syntax = "proto3";

option csharp_namespace = "ChromaControl.Common.Protobufs";

package chromacontrol.drivers;

service Drivers {
    rpc GetDrivers(GetDriversRequest) returns (GetDriversResponse);
}

message GetDriversRequest { }

message GetDriversResponse {
    repeated Driver drivers = 1;
}

message Driver {
    string name = 1;
    bool enabled = 2;
}
